--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -15,33 +15,31 @@
             <table class="table">
                 <thead>
                   <tr>
+                    <th scope="col">No</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">Phone</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Gender</th>
                     <th scope="col"></th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">1</th>
                     <td>Mark</td>
                     <td>Otto</td>
                     <td>@mdo</td>
                   </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                  </tr>
                 </tbody>
               </table>
         </div>
+    </div>
+    <div class="container">
+      <div class="d-flex justify-content-end">
+        <form action="/form">
+          <input class="btn btn-primary" type="submit" value="Home">
+        </form>
+      </div>
     </div>
 </body>
 </html>
