--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -5,35 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      thead,th,td,tr{
+        padding: 10px; 
+      }
+      button{
+        width: 100px;
+      }
+      td{
+        padding-top: 15px;
+      }
+    
+    </style>
 </head>
 <body>
     <div class="container bg-danger text-center my-5 p-3">
-        <div class="text-center">
-            <h3>
+        <div class="text-center p-3">
+            <h3 class="mb-4">
                 User Details
             </h3>
-            <table class="table">
+            <table class="table text-center mb-3">
                 <thead>
                   <tr>
-                    <th scope="col">No</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Age</th>
-                    <th scope="col">Phone</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Gender</th>
-                    <th scope="col"></th>
+                    <th class="py-4" scope="col">Name</th>
+                    <th class="py-4" scope="col">Age</th>
+                    <th class="py-4" scope="col">Phone</th>
+                    <th class="py-4" scope="col">Email</th>
+                    <th class="py-4" scope="col">Gender</th>
+                    <th class="py-4" scope="col"></th>
                   </tr>
                 </thead>
                 <tbody>
                   <% userDatas.forEach(user => { %>
                     <tr>
-                      <td><%= user.id %></td>
-                      <td><%= user.name %></td>
-                      <td><%= user.age %></td>
-                      <td><%= user.phone %></td>
-                      <td><%= user.email %></td>
-                      <td><%= user.gender %></td>
-                      <td></td>
+                      <td style="padding-top: 35px;"><%= user.name %></td>
+                      <td style="padding-top: 35px;"><%= user.age %></td>
+                      <td style="padding-top: 35px;"><%= user.phone %></td>
+                      <td style="padding-top: 35px;"><%= user.email %></td>
+                      <td style="padding-top: 35px;"><%= user.gender %></td>
+                      <td>
+                      <form action="/delete/<%= user.id %>" method="get">
+                        <button type="submit" class="btn btn-danger mb-2">Delete</button>
+                      </form>
+                      <form action="/edit/<%= user.id %>" method="get">
+                        <button type="submit" class="btn btn-success">Edit</button>
+                      </form>
+                      </td>
                     </tr>
                   <% }); %>
                 </tbody>
