--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
+      body {
+        background-color:  	#660000;
+      }
       thead,th,td,tr{
         padding: 10px; 
       }
@@ -14,49 +17,56 @@
       }
       td{
         padding-top: 15px;
+        border-top: 2px solid rgba(16, 108, 89, 0.751);
+      }
+      .tableDiv,table{
+        background-color: white;
+        border-radius: 20px;
       }
     
     </style>
 </head>
 <body>
-    <div class="container bg-danger text-center my-5 p-3">
+    <div class="container text-center my-5 p-3">
         <div class="text-center p-3">
-            <h3 class="mb-4">
+            <h3 class="mb-4 text-white">
                 User Details
             </h3>
-            <table class="table text-center mb-3">
-                <thead>
-                  <tr>
-                    <th class="py-4" scope="col">No</th>
-                    <th class="py-4" scope="col">Name</th>
-                    <th class="py-4" scope="col">Age</th>
-                    <th class="py-4" scope="col">Phone</th>
-                    <th class="py-4" scope="col">Email</th>
-                    <th class="py-4" scope="col">Gender</th>
-                    <th class="py-4" scope="col"></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% userDatas.forEach(user => { %>
+            <div class="bg-light p-3 tableDiv">
+              <table class="table text-center mb-3">
+                  <thead style="background-color: rgba(128, 128, 128, 0.966);">
                     <tr>
-                      <td style="padding-top: 35px;"><%= user.id %></td>
-                      <td style="padding-top: 35px;"><%= user.name %></td>
-                      <td style="padding-top: 35px;"><%= user.age %></td>
-                      <td style="padding-top: 35px;"><%= user.phone %></td>
-                      <td style="padding-top: 35px;"><%= user.email %></td>
-                      <td style="padding-top: 35px;"><%= user.gender %></td>
-                      <td>
-                      <form action="/delete/<%= user.id %>" method="get">
-                        <button type="submit" class="btn btn-danger mb-2">Delete</button>
-                      </form>
-                      <form action="/edit/<%= user.id %>" method="get">
-                        <button type="submit" class="btn btn-success">Edit</button>
-                      </form>
-                      </td>
+                      <th class="py-4" scope="col">No</th>
+                      <th class="py-4" scope="col">Name</th>
+                      <th class="py-4" scope="col">Age</th>
+                      <th class="py-4" scope="col">Phone</th>
+                      <th class="py-4" scope="col">Email</th>
+                      <th class="py-4" scope="col">Gender</th>
+                      <th class="py-4" scope="col"></th>
                     </tr>
-                  <% }); %>
-                </tbody>
-              </table>
+                  </thead>
+                  <tbody>
+                    <% userDatas.forEach(user => { %>
+                      <tr>
+                        <td style="padding-top: 35px;"><%= user.id %></td>
+                        <td style="padding-top: 35px;"><%= user.name %></td>
+                        <td style="padding-top: 35px;"><%= user.age %></td>
+                        <td style="padding-top: 35px;"><%= user.phone %></td>
+                        <td style="padding-top: 35px;"><%= user.email %></td>
+                        <td style="padding-top: 35px;"><%= user.gender %></td>
+                        <td>
+                        <form action="/delete/<%= user.id %>" method="get">
+                          <button type="submit" class="btn btn-danger mb-2">Delete</button>
+                        </form>
+                        <form action="/edit/<%= user.id %>" method="get">
+                          <button type="submit" class="btn btn-success">Edit</button>
+                        </form>
+                        </td>
+                      </tr>
+                    <% }); %>
+                  </tbody>
+                </table>
+              </div>
         </div>
     </div>
     <div class="container">
