--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
       body {
-        background-color:  	#660000;
+        background-color:  	#b51334;
       }
       thead,th,td,tr{
         padding: 10px; 
